--- a/estilo.css
+++ b/estilo.css
@@ -465,218 +465,218 @@ html::-webkit-scrollbar-thumb {
      margin-bottom: -10px;
  }
 
-
-
-
  @media only screen and (max-width: 700px) {
+    * { 
+        max-width: 100%;
+        font-size: .85rem;
+    }
 
-     * {
-         max-width: 100%;
-     }
+    .img-logo--nav {
+        display: none;
+    }
 
+    /* Estilos para el menú hamburguesa */
+    .hamburger {
+        display: block;
+        width: 30px;
+        height: 20px;
+        margin: 10px;
+        cursor: pointer;
+    }
 
-     .img-logo--nav {
-         display: none;
-     }
+    .line {
+        width: 100%;
+        height: 2px;
+        background-color: #000;
+        margin-bottom: 5px;
+    }
 
-     /* Estilos para el menú hamburguesa */
-     .hamburger {
-         display: block;
-         width: 30px;
-         height: 20px;
-         margin: 10px;
-         cursor: pointer;
-     }
+    header {
+        display: none;
+    }
 
-     .line {
-         width: 100%;
-         height: 2px;
-         background-color: #000;
-         margin-bottom: 5px;
-     }
+    #navbar { 
+        display: none;
+    }
 
-     /* Ocultar el menú por defecto */
-     #navbar ul {
-         display: none;
-     }
+    /* Ocultar el menú por defecto */
+    #navbar ul {
+        display: none;
+    }
 
-     /* Mostrar el menú cuando se hace clic en el ícono de hamburguesa */
-     #navbar ul .show {
-         display: block;
-         position: absolute;
-         top: 100%;
-         left: 0;
-         color: #FFF;
-         background-color: #fff;
-         width: 100%;
-         z-index: 1000;
-     }
+    /* Mostrar el menú cuando se hace clic en el ícono de hamburguesa */
+    #navbar ul.show {
+        display: block;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        color: #FFF;
+        background-color: #fff;
+        width: 100%;
+        z-index: 1000;
+    }
 
-     /* Estilos para los elementos del menú */
-     #navbar ul li {
-         width: 100%;
-         padding: 10px;
-         border-bottom: 1px solid #ccc;
-     }
+    /* Estilos para los elementos del menú */
+    #navbar ul li {
+        width: 100%;
+        padding: 10px;
+        border-bottom: 1px solid #ccc;
+    }
 
-     /* Cambiar el color del texto al hacer clic en un enlace */
-     #navbar ul li a:active,
-     #navbar ul li a:focus {
-         color: #f00;
-     }
+    /* Cambiar el color del texto al hacer clic en un enlace */
+    #navbar ul li a:active,
+    #navbar ul li a:focus {
+        color: #f00;
+    }
 
-     /* Alinear el texto del banner en dispositivos móviles */
-     #h1 {
-         font-size: 1.5rem;
-         text-align: center;
-     }
+    /* Alinear el texto del banner en dispositivos móviles */
+    #h1 {
+        margin: auto;
+        font-size: 1.7rem;  
+    }
 
-     #p-banner {
-         font-size: 1rem;
-         display: flex;
-         width: 100%;
-         text-align: center;
-     }
+    #banner {
+        margin: 0;
+    }
 
-     #banner img {
-         width: 100%;
-     }
+    #p-banner {
+        font-size: 1rem; 
+        margin-bottom: 100vh; 
+    }
 
-     .slider {
-         display: none;
-     }
+    #banner img { 
+        position: absolute; 
+        width: 25rem;
+        margin: -84vh 0 0 -11.5rem;
+    }
 
-     #bata_movile {
-         display: block;
-         margin: 1rem 1rem -1rem 1rem;
-     }
+    .slider {
+        display: none;
+    }
 
-     /* Alinear el texto de presentación en dispositivos móviles */
-     #presentacion p {
-         margin: -1.5rem;
-         padding: 2px;
-         text-align: justify;
-         font-size: .7rem;
-         width: 100%;
-     }
+    #bata_movile {  
+        display: flex; 
+        margin: 1rem;
+    }
 
-     #div-se p {
-         font-size: 12px;
-         margin-bottom: 3rem;
-     }
+    /* Alinear el texto de presentación en dispositivos móviles */
+    #presentacion p {
+        padding: 10px; /* Aumenta el espacio alrededor del contenido */
+        text-align: justify;
+        font-size: 0.9rem; /* Ajusta el tamaño de fuente */
+    }
 
-     #section-pm {
-         margin: 0;
-         padding: 0;
-     }
+    #div-se p {
+        font-size: .8rem; /* Ajusta el tamaño de fuente */
+        margin: 1rem -2rem 2rem 0;
+    }
 
-     #h2-pm {
-         position: absolute;
-         font-size: 1rem;
-         margin-top: -3rem;
-     }
+    #section-pm {
+        margin: 0;
+        padding: 0;
+        font-size: .8rem;
+    }
 
-     .div-pm {
-         margin: 5rem 1rem;
-         width: auto;
-     }
+    #h2-pm {
+        margin: auto;
+        font-size: 1.8rem;
+        text-align: center; /* Alinea el texto al centro */
+    }
 
-     #h3-pm {
-         display: none;
-     }
+    .div-pm {
+        margin: 1rem;
+    }
 
-     #foto-pm {
-         position: absolute;
-         min-width: 24.4rem;
-         height: 13rem;
-     }
+    #h3-pm {
+        display: none;
+    }
 
-     #p-pm {
-         margin: 15rem auto 0 35%;
-         font-size: 12px;
-         position: relative;
-     }
+    #foto-pm {
+        min-width: 100%;
+        height: auto;
+    }
 
-     .div-pm-2 {
-         margin: 0 1rem;
-         width: auto;
-         height: auto;
-     }
+    #p-pm {
+        display: none;
+        margin: 0 auto;
+        font-size: 1rem; /* Ajusta el tamaño de fuente */
+    }
 
-     #p-pm-2 {
-         font-size: 12px;
-     }
+    .div-pm-2 {
+        margin: 1rem;
+        padding-bottom: 15rem;
+    }
 
-     #section-pa div {
-         color: #fff;
-         display: block;
-     }
+    #p-pm-2 {
+        font-size: 1rem; /* Ajusta el tamaño de fuente */
+    } 
 
-     #div-pa img {
-         width: 300px;
-     }
+    #section-pa div {
+        color: #fff;
+        display: block;  
+        margin: 0 ;
+    }
 
-     #h2-pa {
-         display: block;
-         color: #f00;
-         font-size: 1rem;
-         width: auto;
-     }
+    #div-pa img { 
+        max-width: 100%;
+        text-align: center;
+    }
 
-     #div-pa {
-         color: #fff;
-         border: 1px solid #d50000;
-         margin: .5rem;
-         padding: .5rem;
-         width: 100%;
-         font-size: .8rem;
-     }
+    #h2-pa {
+        margin: 0 auto -5rem;
+        color: #f00;
+        font-size: 1.8rem;
+        text-align: center; /* Alinea el texto al centro */
+    }
 
-     #div-pa-2 {
-         color: #fff;
-         border: 1px solid #d50000;
-         margin: .5rem;
-         padding: .5rem;
-         width: 100%;
-         font-size: .8rem;
-     }
+    #p-pa,
+    #p-pa-2,
+    #p-pa-3 {
+        position: absolute;
+    }
 
-     #div-pa-3 {
-         color: #fff;
-         border: 1px solid #d50000;
-         margin: .5rem;
-         padding: .5rem;
-         width: 100%;
-         font-size: .8rem;
-     }
+    #div-pa,
+    #div-pa-2,
+    #div-pa-3 {
+        width: auto;
+        color: #fff;
+        border: 1px solid #d50000;
+        margin: 0.5rem;
+        padding: 0.5rem;
+        font-size: 0.8rem; /* Ajusta el tamaño de fuente */
+    } 
 
-     /* Ajustar el tamaño de fuente para dispositivos móviles en la sección de servicios y registros */
-     #h2-registro,
-     #p-registro {
-         font-size: .7rem;
-     }
+    /* Ajustar el tamaño de fuente para dispositivos móviles en el catálogo */
+    #h2-catalog,
+    #catalog ul li {
+        font-size: 14px; /* Ajusta el tamaño de fuente */
+    }
 
-     /* Ajustar el tamaño de fuente para dispositivos móviles en el catálogo */
-     #h2-catalog,
-     #catalog ul li {
-         font-size: 15px;
-     }
+    #catalog img {
+        position: relative;
+        width: 4rem;
+        left: auto;
+    }
 
+    #h2-contact {
+        margin: 0;
+        display: block; 
+    }
 
-     #catalog img {
-         position: absolute;
-         width: 4rem;
-         left: 8.5rem;
-     }
+    #h4-container {
+        margin: 0;
+    }
 
-     #contact {
-         display: block;
-     }
+    #whatsapp {
+        margin: 0;
+    }
 
-     #footer {
-         width: 100%;
-         height: 2rem;
-     }
+    #whatsapp-icon {
+        margin: 0;
+    }
 
-
- }
+    #footer {
+        width: 100%;
+        height: 20rem;
+    }
+}
